--- a/repeat.ipynb
+++ b/repeat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "39d9f6af",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bad42e65",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "array([12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "f2c4b976",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "       [18, 19, 20, 21, 22, 23]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "dab90391",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "       [20, 21, 22, 23]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "81bda013",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "       [21, 22, 23]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "2717a2de",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "       [22, 23]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "95c7e92d",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "       [23]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "76be0f03",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "       [18, 19, 20, 21, 22, 23]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "4c688767",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "       [20, 21, 22, 23]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "0c027e24",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "       [21, 22, 23]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "a0e5289e",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "       [22, 23]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "fb41ef6a",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "       [23]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "1ddcc82c",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "c65c34ff",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "219f7a5a",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,30 +402,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1263f14f",
+   "metadata": {},
+   "source": [
+    "#### Task 5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ea7e5031",
+   "execution_count": 19,
+   "id": "4a0b1b06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.05919549685145009"
+       "array([[-0.48730905,  1.47818632,  0.28822494,  0.94937202],\n",
+       "       [ 0.30502417, -2.80100038, -1.42404466, -1.15030179],\n",
+       "       [ 0.89098942, -0.88115275,  0.05620678,  0.48989751]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.random()"
+    "arr_normal = np.random.normal(0, 1, size=(3, 4))\n",
+    "arr_normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1703d80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_normal.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8bfe04e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.48730905,  1.47818632,  0.28822494,  0.94937202,  0.30502417,\n",
+       "       -2.80100038, -1.42404466, -1.15030179,  0.89098942, -0.88115275,\n",
+       "        0.05620678,  0.48989751])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_normal_fl = arr_normal.flatten()\n",
+    "arr_normal_fl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7b17af33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_normal_fl.size"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0b1b06",
+   "id": "ca14dad8",
    "metadata": {},
    "outputs": [],
    "source": []
